--- a/Catalog/index.html
+++ b/Catalog/index.html
@@ -31,8 +31,8 @@
 
   <div class="card fade">
     <img src="images/WhatsApp Image 2026-02-11 at 09.49.39 (1).jpeg">
-    <h3></h3>
-    <div class="price">Rp 250.000</div>
+    <h3>Stik Pedas 1kg</h3>
+    <div class="price">Rp 35.000</div>
   </div>
 
   <div class="card fade">
@@ -237,3 +237,4 @@
 <script src="js/script.js"></script>
 </body>
 </html>
+
