--- a/Catalog/index.html
+++ b/Catalog/index.html
@@ -244,6 +244,47 @@
     <h3>Kacang Polong Tepung 1kg</h3>
     <div class="price">Rp 40.000</div>
   </div>
+<div class="card fade">
+    <img src="images/WhatsApp Image 2026-02-11 at 09.49.38 (1).jpeg">
+    <h3>Telur Ikan Sambal Bangkok 1kg</h3>
+    <div class="price">Rp 48.000</div>
+  </div>
+
+  <div class="card fade">
+    <img src="images/WhatsApp Image 2026-02-11 at 09.49.38 (1).jpeg">
+    <h3>Pegagan 1kg</h3>
+    <div class="price">Rp 55.000</div>
+  </div>
+
+  <div class="card fade">
+    <img src="images/WhatsApp Image 2026-02-11 at 15.33.41 (2).jpeg">
+    <h3>Kuping Gajah Besar 1kg</h3>
+    <div class="price">Rp 33.000</div>
+  </div>
+
+  <div class="card fade">
+    <img src="images/WhatsApp Image 2026-02-11 at 15.33.41.jpeg">
+    <h3>Kacang Polong Tepung 1kg</h3>
+    <div class="price">Rp 40.000</div>
+  </div>
+
+  <div class="card fade">
+    <img src="images/WhatsApp Image 2026-02-11 at 15.49.13.jpeg">
+    <h3>Jelly Inaco 1kg</h3>
+    <div class="price">Rp 27.000</div>
+  </div>
+
+  <div class="card fade">
+    <img src="images/WhatsApp Image 2026-02-11 at 15.54.27.jpeg">
+    <h3>Emping Manis 1kg</h3>
+    <div class="price">Rp 60.000</div>
+  </div>
+
+  <div class="card fade">
+    <img src="images/WhatsApp Image 2026-02-11 at 15.33.41.jpeg">
+    <h3>Bolu Palma Kering 1kg</h3>
+    <div class="price">Rp 90.000</div>
+  </div>
 
 
 
@@ -261,5 +302,6 @@
 <script src="js/script.js"></script>
 </body>
 </html>
+
 
 
