--- a/Catalog/index.html
+++ b/Catalog/index.html
@@ -228,30 +228,7 @@
   </div>
 
   <div class="card fade">
-    <img src="images/WhatsApp Image 2026-02-11 at 09.49.38 (1).jpeg">
-    <h3>Pegagan 1kg</h3>
-    <div class="price">Rp 55.000</div>
-  </div>
-
-  <div class="card fade">
-    <img src="images/WhatsApp Image 2026-02-11 at 15.33.41 (2).jpeg">
-    <h3>Kuping Gajah Besar 1kg</h3>
-    <div class="price">Rp 33.000</div>
-  </div>
-
-  <div class="card fade">
-    <img src="images/WhatsApp Image 2026-02-11 at 15.33.41.jpeg">
-    <h3>Kacang Polong Tepung 1kg</h3>
-    <div class="price">Rp 40.000</div>
-  </div>
-<div class="card fade">
-    <img src="images/WhatsApp Image 2026-02-11 at 09.49.38 (1).jpeg">
-    <h3>Telur Ikan Sambal Bangkok 1kg</h3>
-    <div class="price">Rp 48.000</div>
-  </div>
-
-  <div class="card fade">
-    <img src="images/WhatsApp Image 2026-02-11 at 09.49.38 (1).jpeg">
+    <img src="">
     <h3>Pegagan 1kg</h3>
     <div class="price">Rp 55.000</div>
   </div>
@@ -302,6 +279,7 @@
 <script src="js/script.js"></script>
 </body>
 </html>
+
 
 
 
