--- a/Catalog/index.html
+++ b/Catalog/index.html
@@ -19,7 +19,6 @@
     </ul>
   </nav>
 </header>
-
 <!-- HOME -->
 <section id="home" class="hero">
   <h1>SELAMAT BERBELANJA</h1>
@@ -222,13 +221,13 @@
   </div>
 
   <div class="card fade">
-    <img src="images/WhatsApp Image 2026-02-11 at 09.49.38 (1).jpeg">
+    <img src="images/WhatsApp Image 2026-02-11 at 15.33.40.jpeg">
     <h3>Telur Ikan Sambal Bangkok 1kg</h3>
     <div class="price">Rp 48.000</div>
   </div>
 
   <div class="card fade">
-    <img src="">
+    <img src="images/WhatsApp Image 2026-02-11 at 15.33.41 (1).jpeg">
     <h3>Pegagan 1kg</h3>
     <div class="price">Rp 55.000</div>
   </div>
@@ -258,11 +257,16 @@
   </div>
 
   <div class="card fade">
-    <img src="images/WhatsApp Image 2026-02-11 at 15.33.41.jpeg">
+    <img src="images/WhatsApp Image 2026-02-11 at 15.54.27 (1).jpeg">
     <h3>Bolu Palma Kering 1kg</h3>
     <div class="price">Rp 90.000</div>
   </div>
 
+   <div class="card fade">
+    <img src="images/WhatsApp Image 2026-02-11 at 15.54.27 (1).jpeg">
+    <h3>Bolu Palma Kering 1kg</h3>
+    <div class="price">Rp 90.000</div>
+  </div>
 
 
 </section>
@@ -279,6 +283,7 @@
 <script src="js/script.js"></script>
 </body>
 </html>
+
 
 
 
