--- a/Catalog/index.html
+++ b/Catalog/index.html
@@ -256,6 +256,13 @@
     <div class="price">Rp 60.000</div>
   </div>
 
+   <div class="card fade">
+    <img src="images/WhatsApp Image 2026-02-11 at 15.54.27 (1).jpeg">
+    <h3>Bolu Palma Kering 1kg</h3>
+    <div class="price">Rp 90.000</div>
+  </div>
+
+
  
 
 
