--- a/Catalog/index.html
+++ b/Catalog/index.html
@@ -12,11 +12,17 @@
 <header>
   <nav class="navbar">
     <div class="logo">SNACK<span>FH</span></div>
-    <ul class="nav-links">
-      <li><a href="#home">Home</a></li>
-      <li><a href="#produk">Produk</a></li>
-      <li><button id="darkToggle">🌙</button></li>
-    </ul>
+   <ul class="nav-links">
+  <li><a href="#home">Home</a></li>
+  <li><a href="#produk">Produk</a></li>
+  <li>
+    <a href="https://wa.me/6281234567890" target="_blank" class="contact-btn">
+      Contact
+    </a>
+  </li>
+  <li><button id="darkToggle">🌙</button></li>
+</ul>
+
   </nav>
 </header>
 <!-- HOME -->
@@ -280,6 +286,7 @@
 <script src="js/script.js"></script>
 </body>
 </html>
+
 
 
 
