--- a/Catalog/index.html
+++ b/Catalog/index.html
@@ -470,6 +470,26 @@
 </div>
 </div>
 
+  <div class="card" data-name="Bolu Palma Kering 1kg" data-price="90000" data-img="images/WhatsApp Image 2026-02-11 at 15.54.27 (1).jpeg">
+<img src="images/WhatsApp Image 2026-02-12 at 08.42.43.jpeg" onclick="openModal(this.closest('.card'))">
+<div class="card-content">
+<h3>Castangel</h3>
+<div class="price">Rp - </div>
+<div class="rating">⭐⭐⭐⭐⭐ 5.0</div>
+<button class="buy-btn" onclick="addToCart(this)">+ Keranjang</button>
+</div>
+</div>
+
+<div class="card" data-name="Bolu Palma Kering 1kg" data-price="90000" data-img="images/WhatsApp Image 2026-02-11 at 15.54.27 (1).jpeg">
+<img src="images/WhatsApp Image 2026-02-12 at 08.42.54.jpeg" onclick="openModal(this.closest('.card'))">
+<div class="card-content">
+<h3>Nastar</h3>
+<div class="price">Rp - </div>
+<div class="rating">⭐⭐⭐⭐⭐ 5.0</div>
+<button class="buy-btn" onclick="addToCart(this)">+ Keranjang</button>
+</div>
+</div>
+  
 </section>
 
 
@@ -509,3 +529,4 @@
 
 </body>
 </html>
+
